src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Last_Review_Reminder_Email__c</fullName>
        <description>The date the last review reminder emails were sent to the user</description>
        <label>Last Review Reminder Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Review_Reminder_Email__c</fullName>
        <description>The date the next review reminder email will be sent to the user</description>
        <formula>IF(
NOT(ISBLANK( User_has_Grant_Schemes__c ))
, IF(
  ISBLANK( Last_Review_Reminder_Email__c )
  , DATE(
     CASE(MONTH(User_has_Grant_Schemes__c + 243), 12, YEAR(User_has_Grant_Schemes__c + 243) + 1, YEAR(User_has_Grant_Schemes__c + 243)),
     CASE(MONTH(User_has_Grant_Schemes__c + 243), 12, 1, MONTH(User_has_Grant_Schemes__c + 243) +1),
     1
    ) - 1
  , DATE(
     CASE(MONTH( Last_Review_Reminder_Email__c ), 11, YEAR(Last_Review_Reminder_Email__c ) + 1, 12, YEAR(Last_Review_Reminder_Email__c ) + 1, YEAR(Last_Review_Reminder_Email__c )),
     CASE(MONTH( Last_Review_Reminder_Email__c ), 11, 1, 12, 2, MONTH( Last_Review_Reminder_Email__c ) +2),
     1
    ) -1
  )
, null
)</formula>
        <label>Next Review Reminder Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SendGrantReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to trigger a workflow which sends the &apos;Incomplete Grants&apos; monthly email to the related user. The flag is checked by a scheduled apex job based on business rules.</description>
        <label>Send Incomplete Grant Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendInactiveUserEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag is used to send reminder email to Admin user notifying the list of Inactive users with Grants</inlineHelpText>
        <label>Send Inactive User Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>This is the picklist value which will be shown for reports on Users.</description>
        <inlineHelpText>This is the picklist value which will be shown for reports on Users.</inlineHelpText>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System User</fullName>
                </value>
                <value>
                    <fullName>Super User</fullName>
                </value>
                <value>
                    <fullName>Standard User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_has_Grant_Schemes__c</fullName>
        <description>Records the created date of the user&apos;s oldest Grant Scheme</description>
        <label>User has Grant Schemes</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>User_Type_is_mandatory</fullName>
        <active>true</active>
        <description>User Type is mandatory field on User object.</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISBLANK(TEXT(User_Type__c))
)</errorConditionFormula>
        <errorDisplayField>User_Type__c</errorDisplayField>
        <errorMessage>Please select a user type for this user.</errorMessage>
    </validationRules>
</CustomObject>